@@ -13,6 +13,7 @@ will_of_flora
 birth_miracle
 harbinger
 inca_thunder
+frigid_staff
 eye_of_zegrath
 water_ele_sword
 crystal_wand
@@ -20,6 +21,7 @@ obsi_might
 greed_persist
 gluttony_helmet
 angel_prot_necklace
+worldbearer
 ms_armor_chest
 skull_of_spirits
 beast_blood
